Removed calls to deprecate functions. Unused objects removed